# py-microservice

./: .gitignore  README.md  create_db.py  pyproject.toml
app/: main.py
app/api/v1/: items.py  java_integration.py  router.py  users.py
app/clients/: java_grpc_client.py  java_rest_client.py
app/grpc_server/: item_servicer.py
app/models/: item.py
app/schemas/: item.py  user.py
app/services/: item_service.py  user_service.py
protos/: item.proto  item_pb2.py  item_pb2_grpc.py  user.proto  user_pb2.py  user_pb2_grpc.py
